--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elite Tech Store</title>
+    <title>Carlos Digi Store</title>
     <link rel="stylesheet" href="./css/main.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -41,9 +41,9 @@
 
     <main class="main-container-products">
 
-        <div class="section-publicity">
-            <h2>El Poder Tecnológico Cerca Tuyo</h2>
-        </div>
+        <!-- <div class="section-publicity">
+            <h2><em>El Poder Tecnológico Cerca Tuyo</em></h2>
+        </div> -->
 
         <section class="menu-title">
             <h2>Menu Productos</h2>
@@ -51,9 +51,9 @@
 
         <section class="buttons">
             <button type="button" class="filter-btn" data-id="all">Todos</button>
-            <button type="button" class="filter-btn" data-id="keyboard">Teclado</button>
-            <button type="button" class="filter-btn" data-id="mouse">Mouse</button>
             <button type="button" class="filter-btn" data-id="headset">Audífono</button>
+            <button type="button" class="filter-btn" data-id="smartwatch">Smartwatch</button>
+            <button type="button" class="filter-btn" data-id="mouse">Mouse</button>
         </section>
 
         <section id="products">
@@ -108,6 +108,6 @@
         
 
 
-<script type="module" src="./js/main.js"></script>
+<script type="module" src="./js/products.js"></script>
 </body>
 </html>
