--- a/productos.html
+++ b/productos.html
@@ -14,7 +14,7 @@
     <header class="header-container">
 
         <div class="logo">
-            <img src="./img/Logo.png" alt="Elite Thech Store">
+            <img src="./img/Logo.png" alt="Carlos Digi Store">
         </div>
 
         <div class="search">
@@ -41,9 +41,9 @@
 
     <main class="main-container-products">
 
-        <!-- <div class="section-publicity">
+        <div class="section-publicity">
             <h2><em>El Poder Tecnológico Cerca Tuyo</em></h2>
-        </div> -->
+        </div>
 
         <section class="menu-title">
             <h2>Menu Productos</h2>
@@ -100,7 +100,7 @@
 
     </main>
 
-    <footer class="footer-container">
+    <footer class="footer-container-products">
 
         <p>© Todos los derechos reservados</p>
 
