fix: adjusting the section-publicity background image

--- a/productos.html
+++ b/productos.html
@@ -42,7 +42,10 @@
     <main class="main-container-products">
 
         <div class="section-publicity">
-            <h2><em>El Poder Tecnológico Cerca Tuyo</em></h2>
+            <h2 class="section-publicity__text">
+                <em>El Poder Tecnológico Cerca Tuyo</em>
+            </h2>
+            <img src="./img/FondoWrapper.png" alt="keyboard background" class="section-publicity__image"/>
         </div>
 
         <section class="menu-title">
