upload whatsapp message
- Añadir El Título Del Producto Al Dar Click En Dicho Producto.
- Quitar La Imagen De Productos.

--- a/productos.html
+++ b/productos.html
@@ -41,12 +41,12 @@
 
     <main class="main-container-products">
 
-        <div class="section-publicity">
+        <!-- <div class="section-publicity">
             <h2 class="section-publicity__text">
                 <em>El Poder Tecnológico Cerca Tuyo</em>
             </h2>
             <img src="./img/FondoWrapper.png" alt="keyboard background" class="section-publicity__image"/>
-        </div>
+        </div> -->
 
         <section class="menu-title">
             <h2>Menu Productos</h2>
